feat: add advanced healthcheck
