# docs/swagger.json
@@ -27,7 +27,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/http.Success"
+                            "$ref": "#/definitions/health.CheckerResult"
+                        }
+                    },
+                    "503": {
+                        "description": "Service Unavailable",
+                        "schema": {
+                            "$ref": "#/definitions/health.CheckerResult"
                         }
                     }
                 }
@@ -221,6 +227,39 @@
             "properties": {
                 "r": {
                     "type": "integer"
+                }
+            }
+        },
+        "health.CheckResult": {
+            "type": "object",
+            "properties": {
+                "error": {
+                    "description": "Error contains the check error message, if the check failed.",
+                    "type": "string"
+                },
+                "status": {
+                    "description": "Status is the availability status of a component.",
+                    "type": "string"
+                },
+                "timestamp": {
+                    "description": "Timestamp holds the time when the check was executed.",
+                    "type": "string"
+                }
+            }
+        },
+        "health.CheckerResult": {
+            "type": "object",
+            "properties": {
+                "details": {
+                    "description": "Details contains health information for all checked components.",
+                    "type": "object",
+                    "additionalProperties": {
+                        "$ref": "#/definitions/health.CheckResult"
+                    }
+                },
+                "status": {
+                    "description": "Status is the aggregated system availability status.",
+                    "type": "string"
                 }
             }
         },
